--- a/M2/npappas3.gradle
+++ b/M2/npappas3.gradle
@@ -4,7 +4,7 @@ defaultTasks 'jar'
 
 jar {
 	manifest {
-		attributes 'Main-Class' : 'AntLabMain' , 'Class-Path' : './lib/resources.jar'
+		attributes 'Main-Class' : 'edu.gatech.oad.antlab.pkg1.AntLabMain' , 'Class-Path' : '../../lib/resources.jar'
 	}
 }
 
